--- a/CIS/.classpath
+++ b/CIS/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/GitHub/CIS-Project/java-json.jar"/>
 	<classpathentry kind="lib" path="C:/GitHub/CIS-Project/json-simple-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/GitHub/CIS-Project/mysql-connector-java-8.0.14.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
