--- a/CIS/.classpath
+++ b/CIS/.classpath
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/GitHub/CIS-Project/java-json.jar"/>
 	<classpathentry kind="lib" path="C:/GitHub/CIS-Project/json-simple-1.1.jar"/>
 	<classpathentry kind="lib" path="C:/GitHub/CIS-Project/mysql-connector-java-8.0.14.jar"/>
+	<classpathentry kind="lib" path="C:/GitHub/CIS-Project/jcommon-1.0.23.jar" sourcepath="C:/GitHub/CIS-Project/jcommon-1.0.23.jar"/>
+	<classpathentry kind="lib" path="C:/GitHub/CIS-Project/jfreechart-1.0.19.jar" sourcepath="C:/GitHub/CIS-Project/jfreechart-1.0.19.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
